--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,14 @@ version: "3.8"
 
 services:
   minecraft:
-    image: itzg/minecraft-server
+    container_name: minecraft
+    image: itzg/minecraft-server:java8-multiarch
     ports:
       - 25565:25565
     environment:
       EULA: "TRUE"
       TYPE: "FORGE"
-      VERSION: 1.16.5
+      VERSION: "1.16.5"
       MODS_FILE: /extras/mods.txt
       REMOVE_OLD_MODS: "true"
     tty: true
